[package]
name = "debugger"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui-multiwin = "0.1.1"
egui = { version = "0.19.0" }
egui_glow = { version = "0.19.0", features = ["clipboard", "winit", "links"]}
glutin = "0.29.1"


[dev-dependencies]