[package]
name = "debugger"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui-multiwin = "0.1.1"
egui = { version = "0.19.0" }
egui_glow = { version = "0.19.0", features = ["clipboard", "winit", "links"]}
glutin = "0.29.1"
rfd = "0.10.0"
static_assertions = "1.1.0"

[target.'cfg(windows)'.dependencies.windows]
version = "0.39.0"
features = [
    "Win32_Foundation", 
    "Win32_Security", 
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Kernel",
    "Win32_System_Threading", 
    "Win32_System_ProcessStatus",
    "Win32_System_SystemInformation"]

[[bin]]
name = "debugger"
path = "src/main.rs"

[lib]
name = "hook"
path = "src/lib.rs"
crate-type = ["cdylib"]